--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -9,5 +9,6 @@
 <body>
     <h1>This is my first page</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel quidem excepturi, dolores repellat perspiciatis dolore ex ratione molestiae totam, itaque cum officiis natus optio, obcaecati cupiditate culpa expedita est facilis.</p>
+    <p><a href="/users">List of users</a></p>
 </body>
 </html>
