--- a/templates/users/show.phtml
+++ b/templates/users/show.phtml
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Hello, <?= $user[0]['nickname'] ?></h1>
-<p>Your email address is <?=$user[0]['email']?></p>
+<h1>Hello, <?= $user['nickname'] ?></h1>
+<p>Your email address is <?=$user['email']?></p>
 <p><a href="/users">Users</a></p>
 </body>
 </html>
